Fixed alignement for left-sidebar variant

--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -294,7 +294,7 @@
 }
 
 #sidebar .search p input {
-	font-size: 11px; width: 90%;
+	font-size: 11px; width: 92%;
 }
 
 #sidebar .search .loading {
