--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -60,12 +60,11 @@ body {
 /* BEGIN: Left Sidebar
 #sidebar {
 	float: left; text-align: right;
-	padding-right: 10px; 
+	padding-right: 20px; 
 	border-right: 1px dotted #ddd; 
 }
 
 #content {
-	float: left;
-	padding-left: 10px; 
+	float: right; text-align: left;
 }
 /* END: Left Sidebar */
